# pathpilot

./: LICENSE  README.md  __init__.py  pathfinder.py  pyproject.toml
pathpilot/: __init__.py  _csv.py  _excel.py  _file.py  _folder.py  _pickle.py  _sqlite.py  _text.py  _utils.py  _zip.py  config.py  core.py  decorators.py  exceptions.py  path.py  pathpilot.py  utils.py
pathpilot/_file/: __init__.py  _csv.py  _excel.py  _pickle.py  _sqlite.py  _text.py  _utils.py  _zip.py  base.py  utils.py
pathpilot/_file/base/: __init__.py  _decorators.py  core.py  df_dispatch_file.py
pathpilot/_file/kinds/: __init__.py  _csv.py  _excel.py  _parquet.py  _pickle.py  _sqlite.py  _text.py  _zip.py
pathpilot/_folder/: __init__.py  backup.py  base.py  utils.py
pathpilot/_folder/folder/: __init__.py  core.py
pathpilot/_folder/folder/_contents/: __init__.py  base.py  files.py  subfolders.py
