[tool.poetry]
name = "pathpilot"
version = "0.4.0"
description = "Library that facilitates file and folder manipulation in Python."
authors = ["Zachary Einck <zacharyeinck@gmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/zteinck/pathpilot"
homepage = "https://github.com/zteinck/pathpilot"

[tool.poetry.dependencies]
python = "^3.8"
clockwork = ">=0.5.0"
cachegrab = ">=0.2.2"
oddments = ">=0.8.1"
polars = "*"
pandas = "*"
numpy = "*"
XlsxWriter = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"