[tool.poetry]
name = "pathpilot"
version = "0.4.2"
description = "Library that facilitates file and folder manipulation in Python."
authors = ["Zachary Einck <zacharyeinck@gmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/zteinck/pathpilot"
homepage = "https://github.com/zteinck/pathpilot"

[tool.poetry.dependencies]
python = "^3.11"
clockwork = ">=0.6.0"
cachegrab = ">=0.2.2"
oddments = ">=0.9.0"
polars = "*"
pandas = "*"
numpy = "*"
XlsxWriter = "*"
fastexcel = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"