[project]
name = "pathpilot"
version = "0.4.5"
description = "Library that facilitates file and folder manipulation in Python."
authors = [
    { name = "Zachary Einck", email = "zacharyeinck@gmail.com" }
]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "cachegrab>=0.2.3",
    "clockwork>=0.6.1",
    "fastexcel>=0.19.0",
    "numpy>=2.4.4",
    "oddments>=0.9.1",
    "openpyxl>=3.1.5",
    "pandas>=3.0.2",
    "polars>=1.39.3",
    "xlsxwriter>=3.2.9",
]

[project.urls]
repository = "https://github.com/zteinck/pathpilot"
homepage = "https://github.com/zteinck/pathpilot"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
